@@ -45,7 +45,7 @@ hadoop-common.version=2.4.0
 hadoop-hdfs.version=2.4.0
 hadoop-mapreduce.version=2.4.0
 hbase94.version=0.94.1
-hbase95.version=0.96.0-${hbase.hadoop.version}
+hbase95.version=0.98.4-${hbase.hadoop.version}
 hsqldb.version=1.8.0.10
 hive.version=0.14.0-SNAPSHOT
 httpcomponents.version=4.1
