@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
  
 IMPROVEMENTS
 
+PIG-4138: Upgrade hbase to hbase-0.98.4 (fang fang chen via daijy)
+
 PIG-4124: Command for Python streaming udf should be configurable (cheolsoo)
 
 PIG-4114: Add Native operator to tez (daijy)
